[package]
name = "smithy"
version = "0.1.0"
authors = ["Stephen M. Coakley <me@stephencoakley.com>"]
description = "Web server that uses the Ingots API"

[dependencies]
hyper = "~0.10.9"
log = "^0.3"
simplelog = "0.4.2"
toml = "~0.4"

[dependencies.ingots]
path = "../ingots"

[dependencies.ingots-loader]
path = "../loader"
